--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
-/* Default styles for the browser */
+
 * {
   margin: 0;
   padding: 0;
   list-style: none;
   text-decoration: none;
-  /*background-color: lightgrey;*/
+
 }
 
 header {
@@ -17,7 +17,6 @@ header {
 
 header .inner {
   width: 1300px;
-  /* This is the inner width of the content inside of your header (80%, etc) */
   height: 100%;
   display: block;
   margin: 0 auto;
@@ -38,7 +37,6 @@ header .logo div {
 header .logo img {
   height: 50px;
   margin-top: 5px;
-  /* Optical alignment of the logo */
 }
 
 header nav {
@@ -75,7 +73,7 @@ header nav a:focus {
 
 header nav .button {
   background-color: #C0D904;
-  /* This HEX is the color of the button */
+
   color: #000;
   padding: 10px 20px;
   border-radius: 4px;
@@ -154,8 +152,14 @@ h1 {
 
 .page-button {
     background-color: #C0D904;
-  /* This HEX is the color of the button */
+
   color: #000;
   padding: 10px 20px;
   border-radius: 4px;
+}
+
+.view-task-button {
+    font-family: "Poppins", sans-serif;
+    text-decoration: none;
+    
 }
